--- a/index.html
+++ b/index.html
@@ -566,8 +566,8 @@
           <a href="#contact">Contact</a>
         </div>
         <div class="nav-buttons">
-          <a href="/login">Login</a>
-          <a href="/signup" class="signup">Sign Up</a>
+          <a href="auth/login.html">Login</a>
+          <a href="auth/register.html" class="signup">Sign Up</a>
         </div>
         <div class="hamburger">
           <i class="fa-solid fa-bars"></i>
