--- a/auth/token-handler.html
+++ b/auth/token-handler.html
@@ -16,6 +16,11 @@
       }
     }
   </script>
+  <!-- Update script with correct paths -->
+  <script>
+    // Redirect to dashboard after processing token
+    window.location.href = '../dashboard.html';
+  </script>
 </head>
 <body>
   <h2 id="status">Processing token...</h2>
