fixed ogin path

--- a/auth/register.html
+++ b/auth/register.html
@@ -482,7 +482,7 @@
 
         <button type="submit" class="button-submit">Sign Up</button>
 
-        <p class="p">Already have an account? <a href="/frontend/login.html" class="span">Sign Up</a></p>
+        <p class="p">Already have an account? <a href="auth/login.html" class="span">Sign Up</a></p>
         <p class="p line">Or With</p>
 
         <div class="flex-row">
@@ -507,7 +507,7 @@
       </form>
 
       <div class="form-footer">
-        Already have an account? <a href="login.html">Login</a>
+        Already have an account? <a href="auth/login.html">Login</a>
       </div>
 
       <div class="message" id="message"></div>
