--- a/auth/login.html
+++ b/auth/login.html
@@ -452,7 +452,7 @@
 
         <button type="submit" class="button-submit">Sign In</button>
 
-        <p class="p">Don't have an account? <a href="/signup" class="span">Sign Up</a></p>
+        <p class="p">Don't have an account? <a href="auth/register.html" class="span">Sign Up</a></p>
         <p class="p line">Or With</p>
 
         <div class="flex-row">
@@ -568,7 +568,7 @@
     });
 
     // Successful login redirect
-    window.location.href = '../dashboard.html';
+    // window.location.href = '../dashboard.html';
     
     // Emergency login link
     document.querySelector('.emergency-link').href = '../ELP/ELP-login.html';
