--- a/auth/login.html
+++ b/auth/login.html
@@ -478,7 +478,7 @@
 
       <div class="message" id="message"></div>
 
-      <!-- Update navigation links -->
+      <!-- Update navigation links
       <div class="form-footer">
         Don't have an account? <a href="register.html">Sign Up</a>
       </div>
@@ -488,7 +488,7 @@
           <img src="../assets/google-icon.svg" alt="Google"> Sign in with Google
         </button>
         <a href="../ELP/ELP-login.html" class="emergency-link">Use Emergency Login Protocol</a>
-      </div>
+      </div> -->
     </div>
   </div>
 
@@ -556,7 +556,7 @@
           messageDiv.style.color = 'green';
           messageDiv.textContent = 'Login successful! Redirecting...';
           setTimeout(() => {
-            window.location.href = '/frontend/dashboard.html'; // Replace with your dashboard page
+            window.location.href = '../dashboard.html'; // Replace with your dashboard page
           }, 1500);
         } else {
           messageDiv.textContent = data.message || 'Login failed';
@@ -571,7 +571,7 @@
     // window.location.href = '../dashboard.html';
     
     // Emergency login link
-    document.querySelector('.emergency-link').href = '../ELP/ELP-login.html';
+    // document.querySelector('.emergency-link').href = '../ELP/ELP-login.html';
   </script>
 </body>
 </html>
