--- a/ELP/ELP-login.html
+++ b/ELP/ELP-login.html
@@ -488,7 +488,7 @@
                 const formData = new FormData();
                 formData.append('file', file);
 
-                const response = await fetch('http://localhost:8080/api/v1/elp/login', {
+                const response = await fetch('https://twofactor-securetotp.loca.lt/api/v1/elp/login', {
                     method: 'POST',
                     body: formData
                 });
