--- a/add-account.html
+++ b/add-account.html
@@ -702,7 +702,7 @@ document.addEventListener('DOMContentLoaded', () => {
         };
 
         try {
-            const response = await fetch('http://localhost:8080/add-account', {
+            const response = await fetch('https://twofactor-securetotp.loca.lt/add-account', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
