--- a/auth/register.html
+++ b/auth/register.html
@@ -541,7 +541,7 @@
     });
 
     // Replace with your backend's Google OAuth login URL
-    const googleOAuthUrl = 'http://localhost:9000/oauth2/authorization/google';
+    const googleOAuthUrl = 'https://ample-expert-mayfly.ngrok-free.app/oauth2/authorization/google';
 
     googleLoginBtn.addEventListener('click', (e) => {
       e.preventDefault();
@@ -562,7 +562,7 @@
       }
 
       try {
-        const response = await fetch('http://localhost:9000/api/v1/auth/login', {
+        const response = await fetch('https://ample-expert-mayfly.ngrok-free.app/api/v1/auth/login', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
