--- a/dashboard.html
+++ b/dashboard.html
@@ -979,7 +979,7 @@
       }
 
       try {
-        const response = await fetch('http://localhost:8080/current-codes', {
+        const response = await fetch('https://twofactor-securetotp.loca.lt/current-codes', {
           headers: {
             'Authorization': `Bearer ${token}`
           }
@@ -1145,7 +1145,7 @@ function setButtonLoading(button, isLoading) {
 
       try {
         const response = await fetch(
-          `http://localhost:8080/account/${encodeURIComponent(accountInfo.issuer)}/${encodeURIComponent(accountInfo.nickname)}`,
+          `https://twofactor-securetotp.loca.lt/account/${encodeURIComponent(accountInfo.issuer)}/${encodeURIComponent(accountInfo.nickname)}`,
           {
             method: 'DELETE',
             headers: {
@@ -1262,7 +1262,7 @@ function setButtonLoading(button, isLoading) {
       }
 
       try {
-        const response = await fetch('http://localhost:8080/verify-pin', {
+        const response = await fetch('https://twofactor-securetotp.loca.lt/verify-pin', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
@@ -1301,7 +1301,7 @@ function setButtonLoading(button, isLoading) {
       }
 
       try {
-        const response = await fetch('http://localhost:8080/get-pin', {
+        const response = await fetch('https://twofactor-securetotp.loca.lt/get-pin', {
           method: 'GET',
           headers: {
             'Content-Type': 'application/json',
