--- a/user/pin-setting.html
+++ b/user/pin-setting.html
@@ -530,7 +530,7 @@
                 const pin = document.getElementById('new-pin').value;
                 
                 try {
-                    const response = await fetch('http://localhost:8080/create-pin', {
+                    const response = await fetch('https://twofactor-securetotp.loca.lt/create-pin', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
@@ -566,7 +566,7 @@
                 const newPin = document.getElementById('updated-pin').value;
                 
                 try {
-                    const response = await fetch('http://localhost:8080/update-pin', {
+                    const response = await fetch('https://twofactor-securetotp.loca.lt/update-pin', {
                         method: 'PUT',
                         headers: {
                             'Content-Type': 'application/json',
@@ -603,7 +603,7 @@
 
             async function deletePin() {
                 try {
-                    const response = await fetch('http://localhost:8080/delete-pin', {
+                    const response = await fetch('https://twofactor-securetotp.loca.lt/delete-pin', {
                         method: 'DELETE',
                         headers: {
                             'Content-Type': 'application/json',
@@ -659,7 +659,7 @@
             // Check if user already has a PIN
             async function checkPinStatus() {
                 try {
-                    const response = await fetch('http://localhost:8080/get-pin', {
+                    const response = await fetch('https://twofactor-securetotp.loca.lt/get-pin', {
                         method: 'GET',
                         headers: {
                             'Content-Type': 'application/json',
