--- a/auth/token-handler.html
+++ b/auth/token-handler.html
@@ -10,16 +10,17 @@
 
       if (token) {
         localStorage.setItem('authToken', token);
-        window.location.href = "../dashboard.html";
+        window.location.href = "/dashboard.html";
       } else {
         document.getElementById('status').textContent = "Token not found in URL.";
+        window.location.href = "/dashboard.html";
       }
     }
   </script>
   <!-- Update script with correct paths -->
   <script>
     // Redirect to dashboard after processing token
-    // window.location.href = '../dashboard.html';
+    // window.location.href = '/dashboard.html';
   </script>
 </head>
 <body>
