--- a/dashboard.html
+++ b/dashboard.html
@@ -974,7 +974,7 @@
     async function fetchCodes() {
       const token = localStorage.getItem('authToken');
       if (!token) {
-        window.location.href = 'auth/login.html';
+        window.location.href = '/auth/login.html';
         return;
       }
 
@@ -1136,7 +1136,7 @@ function setButtonLoading(button, isLoading) {
     async function deleteAccount(accountInfo) {
       const token = localStorage.getItem('authToken');
       if (!token) {
-        window.location.href = 'auth/login.html';
+        window.location.href = '/auth/login.html';
         return;
       }
 
@@ -1257,7 +1257,7 @@ function setButtonLoading(button, isLoading) {
 
       const token = localStorage.getItem('authToken');
       if (!token) {
-        window.location.href = 'auth/login.html';
+        window.location.href = '/auth/login.html';
         return;
       }
 
@@ -1296,7 +1296,7 @@ function setButtonLoading(button, isLoading) {
     async function checkPinStatus() {
       const token = localStorage.getItem('authToken');
       if (!token) {
-        window.location.href = 'auth/login.html';
+        window.location.href = '/auth/login.html';
         return;
       }
 
@@ -1310,6 +1310,11 @@ function setButtonLoading(button, isLoading) {
         });
 
         const data = await response.json();
+        if(data.error === "User not found"){
+sessionStorage.setItem('pinVerified', 'true');
+          pinModal.style.display = 'none';
+          fetchCodes();
+        }
         if (data.pin === "" || data.pin === null) {
           sessionStorage.setItem('pinVerified', 'true');
           pinModal.style.display = 'none';
@@ -1327,7 +1332,7 @@ function setButtonLoading(button, isLoading) {
       // Logout functionality
       document.getElementById('logout-btn').addEventListener('click', function() {
         localStorage.removeItem('authToken');
-        window.location.href = 'auth/login.html';
+        window.location.href = '/auth/login.html';
       });
 
     window.onload = function () {
