--- a/index.html
+++ b/index.html
@@ -561,13 +561,13 @@
         <div class="nav-links">
           <a href="#home">Home</a>
           <a href="#features">Features</a>
-          <a href="dashboard.html">Dashboard</a>
+          <a href="/dashboard.html">Dashboard</a>
           <a href="#about">About</a>
           <a href="#contact">Contact</a>
         </div>
         <div class="nav-buttons">
-          <a href="auth/login.html">Login</a>
-          <a href="auth/register.html" class="signup">Sign Up</a>
+          <a href="/auth/login.html">Login</a>
+          <a href="/auth/register.html" class="signup">Sign Up</a>
         </div>
         <div class="hamburger">
           <i class="fa-solid fa-bars"></i>
@@ -579,7 +579,7 @@
       <div class="hero-content">
         <h1>Secure Your Accounts with SecureTOTP</h1>
         <p>Effortless, reliable, and secure two-factor authentication for all your devices.</p>
-        <a href="/signup">Get Started</a>
+        <a href="/auth/register.html">Get Started</a>
       </div>
     </section>
 
@@ -622,7 +622,7 @@
     <section id="cta">
       <h2>Ready to Secure Your Accounts?</h2>
       <p>Join thousands of users who trust SecureTOTP for their 2FA needs.</p>
-      <a href="/signup">Sign Up Now</a>
+      <a href="/auth/register.html">Sign Up Now</a>
     </section>
 
     <footer>
