--- a/auth/login.html
+++ b/auth/login.html
@@ -520,8 +520,9 @@
     });
 
     // Replace with your backend's Google OAuth login URL
-    const googleOAuthUrl = 'https://ample-expert-mayfly.ngrok-free.app/oauth2/authorization/google';
+    const googleOAuthUrl = 'https://securetotp-backendauth.onrender.com/oauth2/authorization/google';
 
+    // const googleOAuthUrl = 'http://localhost:9000/oauth2/authorization/google';
     googleLoginBtn.addEventListener('click', (e) => {
       e.preventDefault();
       window.location.href = googleOAuthUrl;
@@ -541,7 +542,7 @@
       }
 
       try {
-        const response = await fetch('https://ample-expert-mayfly.ngrok-free.app/api/v1/auth/login', {
+        const response = await fetch('https://securetotp-backendauth.onrender.com/api/v1/auth/login', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
