--- a/auth/register.html
+++ b/auth/register.html
@@ -541,7 +541,7 @@
     });
 
     // Google OAuth login URL
-    const googleOAuthUrl = 'https://ample-expert-mayfly.ngrok-free.app/oauth2/authorization/google';
+    const googleOAuthUrl = 'https://securetotp-backendauth.onrender.com/oauth2/authorization/google';
 
     googleLoginBtn.addEventListener('click', (e) => {
       e.preventDefault();
@@ -563,7 +563,7 @@
       }
 
       try {
-        const response = await fetch('https://ample-expert-mayfly.ngrok-free.app/api/v1/auth/register', {
+        const response = await fetch('https://securetotp-backendauth.onrender.com/api/v1/auth/register', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
