--- a/auth/verify-otp.html
+++ b/auth/verify-otp.html
@@ -221,7 +221,7 @@
       setButtonLoading(sendOtpBtn, true);
       
       try {
-        const res = await fetch('https://ample-expert-mayfly.ngrok-free.app/api/v1/auth/resend-otp', {
+        const res = await fetch('https://securetotp-backendauth.onrender.com/api/v1/auth/resend-otp', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ email })
@@ -264,7 +264,7 @@
       setButtonLoading(verifyBtn, true);
 
       try {
-        const res = await fetch('https://ample-expert-mayfly.ngrok-free.app/api/v1/auth/verify-otp', {
+        const res = await fetch('https://securetotp-backendauth.onrender.com/api/v1/auth/verify-otp', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ email, otp })
@@ -294,7 +294,7 @@
       setButtonLoading(resendBtn, true);
 
       try {
-        const res = await fetch('https://ample-expert-mayfly.ngrok-free.app/api/v1/auth/resend-otp', {
+        const res = await fetch('https://securetotp-backendauth.onrender.com/api/v1/auth/resend-otp', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ email })
