fix totp service url

--- a/add-account.html
+++ b/add-account.html
@@ -703,7 +703,7 @@ document.addEventListener('DOMContentLoaded', () => {
         };
 
         try {
-            const response = await fetch('https://twofactor-securetotp.loca.lt/add-account', {
+            const response = await fetch('https://securetotp-service.onrender.com/add-account', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
