--- a/ELP/ELP-setup.html
+++ b/ELP/ELP-setup.html
@@ -633,7 +633,7 @@
 
             try {
                 // Correct the API endpoint to match your backend
-                const response = await fetch('https://twofactor-securetotp.loca.lt/api/v1/elp/generate', {
+                const response = await fetch('https://securetotp-service.onrender.com/api/v1/elp/generate', {
                     method: 'POST',
                     headers: {
                         'Authorization': `Bearer ${token}`
